@@ -452,9 +452,10 @@ extern void interface_transmit_tnc2(const struct aprx_interface *aif, const char
 
 
 /* pbuf.c */
-
 extern void           pbuf_get(struct pbuf_t *pb);
 extern void           pbuf_put(struct pbuf_t *pb);
 extern struct pbuf_t *pbuf_new(const int is_aprs, const int axdatalen, const int tnc2len);
 
 
+/* parse_aprs.c */
+extern int parse_aprs(struct pbuf_t *pb);
